Fix word break in links

--- a/static/css/thottingal.in.css
+++ b/static/css/thottingal.in.css
@@ -22,6 +22,9 @@ h1 {
 p {
   text-wrap: pretty;
   line-height: 1.7;
+  a {
+    word-break: break-all;
+  }
 }
 
 figure {
